--- a/PurpleOnyx/PurpleOnyx.theme.css
+++ b/PurpleOnyx/PurpleOnyx.theme.css
@@ -157,8 +157,7 @@ div[class*="checkbox"][class*="checked"] {
 }
 
  /* Minimal Menu Size */
-div[role="menu"] div[role^="menuitem"],
-div[role="menu"] div[role^="group"] {
+div[role="menu"] div[role^="menuitem"] {
 	padding: 1px 0px 0px 4px;
 }
 
@@ -178,7 +177,7 @@ border-color: var(--oPur-42) !important;
 		max-height: unset;
 	}
 	[class*="scroller"] {
-		padding: 4px !important;
+		padding: 4px 2px 4px 4px !important;
 	}
 }
 
@@ -240,6 +239,10 @@ svg[class*="radioIndicatorChecked"]>circle[class*="refreshIconFill"] {
 
 [class*="colorDefault"] [class*="label"] {
 	color: unset;
+}
+
+[class*="botTagOP"] {
+	background-color: var(--oPur-84);
 }
 
  /* Square Embeds */
@@ -946,6 +949,15 @@ section.panels__5e434 {
 	fill: var(--oPurple);
 }
 
+.accountPopout__37e49 .body_ce8328 {
+	gap: 6px;
+	padding: 4px 0px 4px 8px;
+}
+
+.accountPopout__37e49 .menus_ce8328 {
+	gap: unset;
+}
+
  /* Stop Status Colors from Flickering when hovering */
 foreignObject[mask="url(#svg-mask-status-online)"]>div[class^="status"][style="background-color: currentcolor;"] {
 	background-color: rgb(67, 162, 90) !important;
@@ -989,15 +1001,15 @@ foreignObject[mask="url(#svg-mask-status-offline)"]>div[class^="status"][style="
 .menu_c1e9c4[id="switch-accounts-submenu"] {
 	min-width: unset !important;
 	width: fit-content;
-	padding-right: 4px;
+	padding-right: 6px;
 }
  /* Fix SimpleUserMenu Divider Width */
 #account-panel > div > div.separator_c1e9c4 {
 	width: unset;
 }
  /* Fix SimpleUserMenu Menu/Group alignment */
-#account-panel > div > div[role="group"] {
-	padding: unset;
+#account-panel div[role="menuitem"] {
+	padding: 4px 0px;
 }
 
  /* Adds an @ to the username */
